2008-05-31  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/magnifier/ccm-magnifier.c:
    * plugins/mosaic/ccm-mosaic.c:
    * plugins/opacity/ccm-opacity.c:
    * plugins/opacity/ccm-opacity.schemas.in:
    * plugins/perf/ccm-perf.c:
    * src/ccm-keybind.c:
    * src/ccm-keybind.h:
    * src/ccm-property-async.c:
    * src/ccm-screen.c:
    * src/ccm-window.c:
    * src/ccm.h:
    * src/eggaccelerators.c:
    * src/eggaccelerators.h: Add support of button mouse shortcuts, set shortcut
                             Super (roll wheell) to change window opacity.

2008-05-29  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/fade/ccm-fade.c:
    * plugins/menu-animation/ccm-menu-animation.c:
    * plugins/opacity/ccm-opacity.c:
    * plugins/opacity/ccm-opacity.plugin.desktop.in:
    * plugins/shadow/ccm-shadow.c
    * src/ccm-property-async.c:
    * src/ccm-screen.c:
    * src/ccm-window.c:
    * src/ccm.h: Remove state changed signal and update property changed to
                 indicate the type of property changed.
                 Remove get property sync methods not really needed.
                 Check hint type on map in opacity plugin.

2008-05-28  Nicolas Bruguier  <gandalfn@club-internet.fr>
    
    * plugins/fade/ccm-fade.c:
    * plugins/menu-animation/ccm-menu-animation.c:
    * src/ccm-plugin.c:
    * src/ccm-plugin.h:
    * src/ccm-screen-plugin.h:
    * src/ccm-window-plugin.h: Serialize unlock plugin operations.
    
    * src/ccm-pixmap-glitz.c:
    * src/ccm-pixmap-image.c: 
    * src/ccm-window-glitz.c: Get window attributes with _ccm_window_get_attribs.
    
    * src/ccm-drawable.c:
    * src/ccm-timeline.c: Typo fixes .
    
    * src/ccm-property-async.c:
    * src/ccm-screen.c:
    * src/ccm-window.c: Fixes some redraw issues.

2008-05-28  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-screen.c: Add check stack on property/state change.

2008-05-28  Nicolas Bruguier  <gandalfn@club-internet.fr>
