@@ -191,13 +191,15 @@ ccm_shadow_need_shadow(CCMWindow* window)
 	
 	CCMWindowType type = ccm_window_get_hint_type(window);
 	
-	return (ccm_window_is_decorated (window) || 
+	return !window->is_input_only &&
+		   (ccm_window_is_decorated (window) || 
 		    (type != CCM_WINDOW_TYPE_NORMAL && 
 			 type != CCM_WINDOW_TYPE_DIALOG)) && 
 		   (type != CCM_WINDOW_TYPE_DOCK || window->opaque) &&
-		   !ccm_window_is_shaded (window) &&
-		   !ccm_window_skip_taskbar (window) &&   
-		   !ccm_window_skip_pager (window) &&   
+		   ((type != CCM_WINDOW_TYPE_DOCK && window->opaque) || 
+			(!ccm_window_is_shaded (window) &&
+			 !ccm_window_skip_taskbar (window) &&   
+			 !ccm_window_skip_pager (window))) &&   
 		   (ccm_window_is_managed(window) ||   
 			type == CCM_WINDOW_TYPE_DOCK ||
 			type == CCM_WINDOW_TYPE_DROPDOWN_MENU || 
